# numericalmethod

./: README.md
exercise_1/1_GaussMethod/: exefile  main.cpp
exercise_1/2_JordanGaussMethod/: exefile  main.cpp
exercise_1/3_SimpleIteration/: Makefile  exefile  main.cpp
exercise_1/4_ZeidelMethod/: Makefile  exefile  main.cpp
exercise_1/5_DeterminantByGauss/: exefile  main.cpp
exercise_1/6_InversMatrixByGauss/: CMakeLists.txt  main.cpp  matrix.h  test.h
exercise_1/7_InversMatrixBySimpleIterations/: exefile  main.cpp
exercise_2/1_BisectionMethod/: exefile  main.cpp
exercise_2/2_SimpleIterations/: exefile  main.cpp
exercise_2/3_NewtonMethod/: exefile  main.cpp
exercise_2/4_ChordMethod/: exefile  main.cpp
exercise_2/5_ParabolaMethod/: exefile  main.cpp
exercise_3/1_SimpleIteration/: exefile  main.cpp
exercise_3/2_NewthonMethod/: Makefile  exefile  prog.cpp
exercise_3/3_ZeidelMethod/: Makefile  exefile  main.cpp
exercise_4/1_RectangleRule/: exefile  main.cpp
exercise_4/2_TrapezoidRule/: Makefile  exefile  main.cpp
exercise_4/3_SimpsonRule/: exefile  main.cpp
exercise_4/4_NewthonMethod/: exefile  main.cpp
exercise_5/10_ImproperIntegral/: main.cpp
exercise_5/13_DoubleIntegral/: Makefile  a.out  main.cpp
exercise_5/20_Fourier/: Makefile  a.out  main.cpp
exercise_5/2_BiCGStab/: Makefile  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  exefile  foo.h  main.cpp
exercise_5/5_SerialApproximation/: Makefile  Matrix.cpp  (+6 more)
exercise_6/: Matrix.cpp  file.txt  main.cpp
exercise_7/: Makefile  Matrix.cpp  Matrix.h  exefile  file.txt  foo.h  main.cpp
